...
                // current medication
                Section(header: Text("Medications")){
                    // add medication
                    Button(action: { isPresented.toggle() }) {
                        Label("Prescribe New Medication", systemImage: "stethoscope")
                    }
                    .accessibilityIdentifier("addMedication")
                    
                    ForEach(shownMedications){
                        medication in
                        VStack(alignment: .leading) {
                            Text("\(medication.name)")
                                .font(.headline)
...
//        route: "by mouth",
//        frequency: 1,
//        duration: 90
//    )
//    let medication2 = try! Medication(
//        date: "2025-01-01",
//        name: "Aspirin",
//        dose: 81,
//        route: "by mouth",
//        frequency: 1,
//        duration: 90
//    )
//
...
