...
        NavigationStack {
            List{
                // add patient button
                Button(action: { showPatientForm.toggle() }) {
                    Label("Add Patient", systemImage: "person.fill.badge.plus")
                }
                .accessibilityIdentifier("addPatient")
                
                // show each patient
                ForEach(searchResults){
                    patient in
                    NavigationLink(value: patient) {
                        VStack(alignment: .leading, spacing: 6) {
...
